--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "^4.16.4"
   },
   "devDependencies": {
-    "mocha": "^5.2.0",
-    "supertest": "^3.3.0"
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
