--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
 version: "3.2"
 services:
-  proyecto:
+  example:
     build: .
     volumes:
       - type: bind
         source: ./src
         target: /app/src
+      - type: bind
+        source: ./test
+        target: /app/test
     ports:
     - 5000:5000
